# cpphlang

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
include/hlang/ast/: ast_headers.h  ast_node.h
include/hlang/ast/expr/: array_decl.h  array_decl_node.h  assignment.h  assignment_node.h  binary_node.h  binary_operator.h  call.h  expression.h  identifier.h  identifier_node.h  literal.h  literal_node.h  range.h  ternary_node.h  ternary_operator.h  unary_node.h  unary_operator.h
include/hlang/ast/stmt/: assignment.h  block.h  call.h  for.h  if.h  params_decl.h  proc_decl.h  program.h  statement.h  stmts.h  var_decl.h
include/hlang/builtin/: range.h
include/hlang/error/: parse_error.h  syntax_error.h  type_error.h
include/hlang/lexer/: lexer.h
include/hlang/parser/: expr_parser.h  parser.h  stmt_parser.h
include/hlang/parser/expr/: expr_headers.h  precedence.h
include/hlang/parser/expr/infix/: assignment.h  binary_operator.h  call.h  infix.h  ternary_operator.h
include/hlang/parser/expr/prefix/: identifier.h  literal.h  parentheses.h  prefix.h  unary_operator.h
include/hlang/token/: token.h  token_stream.h
include/hlang/utils/: char_helper.h  file_stream.h
include/hlang/visitor/: ast_visitor.h
include/hlang/visitor/analyzer/: analyzer.h
include/hlang/visitor/generator/: cpp_emitter.h  cpp_gen.h
src/: CMakeLists.txt  main.cpp
src/ast/: expression.cpp  statement.cpp
src/lexer/: lexer.cpp
src/parser/: expr_parser.cpp  parser.cpp  stmt_parser.cpp
src/parser/expr/infix/: assignment.cpp  binary_operator.cpp  call.cpp  ternary_operator.cpp
src/parser/expr/prefix/: identifier.cpp  identifier_node.cpp  literal.cpp  parentheses.cpp  unary_operator.cpp
src/visitor/analyzer/: analyzer.cpp
src/visitor/generator/: cpp_emitter.cpp  cpp_gen.cpp
test/: CMakeLists.txt
test/lib/googletest/googlemock/: CMakeLists.txt
test/lib/googletest/googlemock/docs/: CookBook.md  DesignDoc.md
test/lib/googletest/googlemock/include/gmock/: gmock-actions.h  gmock-generated-function-mockers.h  gmock-generated-function-mockers.h.pump  gmock-matchers.h  gmock-spec-builders.h
test/lib/googletest/googlemock/test/: gmock-actions_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc
test/lib/googletest/googletest/: CMakeLists.txt
test/lib/googletest/googletest/cmake/: internal_utils.cmake
test/lib/googletest/googletest/docs/: advanced.md
test/lib/googletest/googletest/include/gtest/: gtest-printers.h
test/lib/googletest/googletest/include/gtest/internal/: gtest-port.h
test/lib/googletest/googletest/samples/: sample8_unittest.cc
test/lib/googletest/googletest/src/: gtest-port.cc  gtest-printers.cc  gtest.cc
test/lib/googletest/googletest/test/: googletest-param-test-test.cc  googletest-printers-test.cc  googletest-tuple-test.cc
test/src/: demo_tests.cpp  run_all_tests.cpp
